Fixed Horizontal Scroll Bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ body {
     background-color: #e3e2e1;
     max-width: 100% !important;
     overflow-x: hidden !important;
+    overflow: auto;
 }
 
 *:focus {
